# OS-1

./: .gitignore  .gitmodules
TPs/so-i-24-Gaston118/: .gitignore  Doxyfile  Makefile
TPs/so-i-24-Gaston118/.github/actions/building/: action.yml
TPs/so-i-24-Gaston118/include/: expose_metrics.h  metrics.h
TPs/so-i-24-Gaston118/src/: expose_metrics.c  main.c  metrics.c
TPs/so-i-24-chp2-Gaston118/: .gitmodules  CMakeLists.txt  comandos.txt  config.json
TPs/so-i-24-chp2-Gaston118/.github/actions/building/: action.yml
TPs/so-i-24-chp2-Gaston118/.github/actions/coverage_and_test/: action.yml
TPs/so-i-24-chp2-Gaston118/include/: batch.h  commands.h  exec.h  monitor.h  prompt.h  signals.h
TPs/so-i-24-chp2-Gaston118/src/: batch.c  commands.c  exec.c  main.c  monitor.c  pipes.c  prompt.c  signals.c
TPs/so-i-24-chp2-Gaston118/test/: test1.c
curso-c/: ej1.c  ej2.c  ej3.c
gnu/linux/: client.c
parciales/parcial1/: 1.c  2.c  3.c  4.c
parciales/parcial2/: .gitkeep  1.c  2.c  3.c  4.c  5.c  6.c
repaso/: ascii.c  factorial.c  hola.c  printeable.c  square.c
